--- a/msvc/dantto4k_dll.vcxproj
+++ b/msvc/dantto4k_dll.vcxproj
@@ -71,12 +71,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(SolutionDir)thirdparty\openssl\include;$(SolutionDir)thirdparty\tsduck\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)thirdparty\tsduck\lib\Debug-Win64;$(SolutionDir)thirdparty\openssl\lib\VC\x64\MD;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)..\thirdparty\tsduck\include;$(SolutionDir)..\thirdparty\asio\asio\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)..\thirdparty\tsduck\lib\Debug-Win64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(SolutionDir)thirdparty\openssl\include;$(SolutionDir)thirdparty\tsduck\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)thirdparty\tsduck\lib\Release-Win64;$(SolutionDir)thirdparty\openssl\lib\VC\x64\MT;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)..\thirdparty\tsduck\include;$(SolutionDir)..\thirdparty\asio\asio\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)..\thirdparty\tsduck\lib\Release-Win64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <TargetName>BonDriver_dantto4k</TargetName>
@@ -128,7 +128,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_TSDUCKDLL_USE;_DISABLE_CONSTEXPR_MUTEX_CONSTRUCTOR;_DEBUG;DANTTO4KDLL_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard>stdcpp20</LanguageStandard>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <AdditionalOptions>/FS %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
@@ -136,7 +136,7 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
-      <AdditionalDependencies>tsduck.lib;libcrypto.lib;libssl.lib;Crypt32.lib;dbghelp.lib;Winscard.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>tsduck.lib;Winscard.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -157,14 +157,14 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
-      <AdditionalDependencies>tsduck.lib;libcrypto.lib;libssl.lib;Crypt32.lib;dbghelp.lib;Winscard.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>tsduck.lib;Winscard.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="../src/accessControlDescriptor.cpp" />
-    <ClCompile Include="../src/applicationMfuDataProcessor.cpp" />
+    <ClCompile Include="..\src\mpuApplicationProcessor.cpp" />
     <ClCompile Include="../src/aribUtil.cpp" />
-    <ClCompile Include="../src/audioMfuDataProcessor.cpp" />
+    <ClCompile Include="..\src\mpuAudioProcessor.cpp" />
     <ClCompile Include="../src/acasCard.cpp" />
     <ClCompile Include="../src/adtsConverter.cpp" />
     <ClCompile Include="../src/b24Color.cpp" />
@@ -201,11 +201,8 @@
     <ClCompile Include="../src/timeUtil.cpp" />
     <ClCompile Include="../src/tlvDescriptorFactory.cpp" />
     <ClCompile Include="../src/tlvTableFactory.cpp" />
-    <ClCompile Include="../src/tsARIBCharset.cpp" />
-    <ClCompile Include="../src/tsARIBCharsetData.cpp" />
-    <ClCompile Include="../src/tsARIBCharsetEncoding.cpp" />
     <ClCompile Include="../src/ttml.cpp" />
-    <ClCompile Include="../src/videoMfuDataProcessor.cpp" />
+    <ClCompile Include="..\src\mpuVideoProcessor.cpp" />
     <ClCompile Include="../src/m2SectionMessage.cpp" />
     <ClCompile Include="../src/m2ShortSectionMessage.cpp" />
     <ClCompile Include="../src/mhAudioComponentDescriptor.cpp" />
@@ -226,7 +223,7 @@
     <ClCompile Include="../src/mhShortEventDescriptor.cpp" />
     <ClCompile Include="../src/mhStreamIdentificationDescriptor.cpp" />
     <ClCompile Include="../src/mhTot.cpp" />
-    <ClCompile Include="../src/mmt.cpp" />
+    <ClCompile Include="..\src\mmtp.cpp" />
     <ClCompile Include="../src/mmtDescriptors.cpp" />
     <ClCompile Include="../src/mmtGeneralLocationInfo.cpp" />
     <ClCompile Include="../src/remuxerHandler.cpp" />
@@ -235,7 +232,7 @@
     <ClCompile Include="../src/mpt.cpp" />
     <ClCompile Include="../src/mpu.cpp" />
     <ClCompile Include="../src/fragmentAssembler.cpp" />
-    <ClCompile Include="../src/mfuDataProcessorFactory.cpp" />
+    <ClCompile Include="..\src\mpuProcessorFactory.cpp" />
     <ClCompile Include="../src/mpuExtendedTimestampDescriptor.cpp" />
     <ClCompile Include="../src/mpuTimestampDescriptor.cpp" />
     <ClCompile Include="../src/networkNameDescriptor.cpp" />
@@ -250,14 +247,15 @@
     <ClCompile Include="../src/smartCard.cpp" />
     <ClCompile Include="../src/tlvDescriptors.cpp" />
     <ClCompile Include="../src/transmissionControlSignal.cpp" />
-    <ClCompile Include="../src/subtitleMfuDataProcessor.cpp" />
+    <ClCompile Include="..\src\mpuSubtitleProcessor.cpp" />
     <ClCompile Include="../src/videoComponentDescriptor.cpp" />
+    <ClCompile Include="..\src\aribEncoder.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="../src/accessControlDescriptor.h" />
-    <ClInclude Include="../src/applicationMfuDataProcessor.h" />
+    <ClInclude Include="..\src\mpuApplicationProcessor.h" />
     <ClInclude Include="../src/aribUtil.h" />
-    <ClInclude Include="../src/audioMfuDataProcessor.h" />
+    <ClInclude Include="..\src\mpuAudioProcessor.h" />
     <ClInclude Include="../src/acasCard.h" />
     <ClInclude Include="../src/adtsConverter.h" />
     <ClInclude Include="../src/b24Color.h" />
@@ -302,9 +300,8 @@
     <ClInclude Include="../src/timeUtil.h" />
     <ClInclude Include="../src/tlvDescriptorFactory.h" />
     <ClInclude Include="../src/tlvTableFactory.h" />
-    <ClInclude Include="../src/tsARIBCharset.h" />
     <ClInclude Include="../src/ttml.h" />
-    <ClInclude Include="../src/videoMfuDataProcessor.h" />
+    <ClInclude Include="..\src\mpuVideoProcessor.h" />
     <ClInclude Include="../src/IBonDriver.h" />
     <ClInclude Include="../src/ip.h" />
     <ClInclude Include="../src/m2SectionMessage.h" />
@@ -326,7 +323,7 @@
     <ClInclude Include="../src/mhShortEventDescriptor.h" />
     <ClInclude Include="../src/mhStreamIdentificationDescriptor.h" />
     <ClInclude Include="../src/mhTot.h" />
-    <ClInclude Include="../src/mmt.h" />
+    <ClInclude Include="..\src\mmtp.h" />
     <ClInclude Include="../src/mmtDescriptors.h" />
     <ClInclude Include="../src/mmtGeneralLocationInfo.h" />
     <ClInclude Include="../src/remuxerHandler.h" />
@@ -334,8 +331,8 @@
     <ClInclude Include="../src/mpt.h" />
     <ClInclude Include="../src/mpu.h" />
     <ClInclude Include="../src/fragmentAssembler.h" />
-    <ClInclude Include="../src/mfuDataProcessorBase.h" />
-    <ClInclude Include="../src/mfuDataProcessorFactory.h" />
+    <ClInclude Include="..\src\mpuProcessorBase.h" />
+    <ClInclude Include="..\src\mpuProcessorFactory.h" />
     <ClInclude Include="../src/mpuExtendedTimestampDescriptor.h" />
     <ClInclude Include="../src/mpuTimestampDescriptor.h" />
     <ClInclude Include="../src/networkNameDescriptor.h" />
@@ -354,13 +351,14 @@
     <ClInclude Include="../src/tlvDescriptors.h" />
     <ClInclude Include="../src/tlvTableBase.h" />
     <ClInclude Include="../src/transmissionControlSignal.h" />
-    <ClInclude Include="../src/subtitleMfuDataProcessor.h" />
+    <ClInclude Include="..\src\mpuSubtitleProcessor.h" />
     <ClInclude Include="../src/videoComponentDescriptor.h" />
     <ClInclude Include="../src/IBonDriver2.h" />
     <ClInclude Include="../src/mmtDescriptorBase.h" />
     <ClInclude Include="../src/mmtTlvDemuxer.h" />
-    <ClInclude Include="../src/aesCtrCipher.h" />
-    <ClInclude Include="../src/sha256.h" />
+    <ClInclude Include="..\src\aesCtrCipher.h" />
+    <ClInclude Include="..\src\aribEncoder.h" />
+    <ClInclude Include="..\src\sha256.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
