--- a/msvc/dantto4k_dll.vcxproj
+++ b/msvc/dantto4k_dll.vcxproj
@@ -162,6 +162,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="../src/accessControlDescriptor.cpp" />
+    <ClCompile Include="..\src\aes.c" />
     <ClCompile Include="..\src\mpuApplicationProcessor.cpp" />
     <ClCompile Include="../src/aribUtil.cpp" />
     <ClCompile Include="..\src\mpuAudioProcessor.cpp" />
@@ -253,6 +254,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="../src/accessControlDescriptor.h" />
+    <ClInclude Include="..\src\aes.h" />
     <ClInclude Include="..\src\mpuApplicationProcessor.h" />
     <ClInclude Include="../src/aribUtil.h" />
     <ClInclude Include="..\src\mpuAudioProcessor.h" />
